@@ -4,7 +4,8 @@ Linux-PAM NEWS -- history of user-visible changes.
 * pam_tally: Fix support for large UIDs
 * Fixed all problems found by Coverity
 * Add manual page for pam_mkhomedir, pam_umask, pam_filter,
-  pam_issue, pam_ftp, pam_group, pam_lastlog
+  pam_issue, pam_ftp, pam_group, pam_lastlog, pam_listfile,
+  pam_localuser
 
 Release 0.99.4.0
 
